--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -29,30 +29,35 @@
             </div>
         </nav>
         <div class="container-fluid text-center">
-            <div class="row bg-dark-subtle p-5">
+            <div class="row bg-dark-subtle p-2">
                 <div class="col">
                     <div class="text-black">
-                        <h1>Welcome</h1>
-                        <h3>This is a Website that allows you to see NASA's APOD</h3>
-                        <h3>or Astronemy Picture Of the Day.</h3>
-                        <h3>The Home page will display the current picutre of the day.</h3>
-                        <h3>The Explore page will let you view previous pictures as well.</h3>
-                        <h3>If you like any of the pictures, you can like them for later viewing on the third page.</h3>
+                        <h2>Welcome to the Explore page</h2>
+                        <h5>Here you can enter a date to see previous pictures of the day</h5>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="container-fluid justify-content-center text-center">
-            <div class="row bg-dark p-2 justify-content-md-center">
-                <div class="col-md-auto">
-                    <div class="card text-center justify-content-md-center" style="max-width: 100%;">
-                        <div class="card-body">
-                            <h5 class="card-title">NASA Astronemy Picture of the Day.<br/>
-                                <%= nasa.title%><br/>
-                                <%= nasa.date%>
-                            </h5>
-                            <img src="<%= nasa.url%>" class="card-img-fluid" alt="">
-                            <div>
+        <div class="container-fluid text-center justify-content-center">
+            <div class="row bg-dark p-2">
+                <div class="row p-1 justify-content-center">
+                    <div class="col-2 bg-white p-1">
+                        <form action="/explore" method="get" id="imgLookUp">
+                            <input type="date" name="date" id="date" value ="<%= nasa.date%>"/>
+                            <button type="submit" class="btn btn-primary">Search</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="row p-1 justify-content-center">
+                    <div class="col-auto">
+                        <div class="card text-center justify-content-center" style="max-width: 100%">
+                            <div class="card-body">
+                                <h5 class="card-title">NASA Astronemy Picture for <%= nasa.date%><br/>
+                                    <%= nasa.title%>
+                                </h5>
+                                <img src="<%= nasa.url%>" class="card-img-fluid" alt="<%= nasa.explanation%>">
+                            </div>
+                            <div class="p-1">
                                 <form action="/like" method="POST" id="like">
                                     <%if(picList.length <= 0){ %>
                                         <input type="hidden" name="date" value="<%= nasa.date%>"/>
